package com.xinqihd.sns.gameserver.proto;
//公会设施的升级权限和数据

option java_outer_classname = "XinqiBceGuildFacilityLevelUp"; 
message BceGuildFacilityLevelUp {
  /**
  * 公会的设施类型
  * 0: 商城
  * 1: 铁匠铺
  * 2: 仓库
  * 3: 公会
  * 4: 技能
  *
  * 技能类型
  * 10: 攻击
  * 11: 敏捷 
  * 12: 幸运 
  * 13: 防御 
  * 14: 生命 
  * 15: 寻宝 
  * 16: 祈福
  */
  optional int32 type = 1;
  /**
  * true 表示立即冷去
  * false 表示升级
  */
  optional bool cooldown = 2 [default=false]; 
}
